--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,141 @@
 .App {
+ 
   text-align: center;
+  text-indent:5%;
   background: #67B26F;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #4ca2cd, #67B26F);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #4ca2cd, #67B26F); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to right, #e4916a, #e6c276);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #2BC0E4, #EAECC6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 .header{
   background:rgba(255,255,255,0.2);
-  border-bottom:1px solid white;
+  border-bottom:2px solid white;
   height: 2.5rem;
   display:flex;
   align-items: center;
   padding: 0 12px;
   font-size:1.2rem;
-  color:white;
+  color: rgb(255, 255, 255);
   font-weight: bold;
 }
 .logo{
-  height:1.8rem;
-  width:1.8rem;
+  height:2rem;
+  width:2.2rem;
   margin-right:10px;
-  background: url(./img/parrot.gif);
+  background: url(./img/ele.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size:cover;
+}
+
+.messages{
+  
+  text-align: left;
+  display: flex;
+  flex-direction: column-reverse;
+  flex: 1;
+  overflow: auto;
+}
+.message-row{
+  width:100%;
+}
+.message{
+  
+  background:black;
+  color:white;
+  border-radius:10px;
+  margin:-1px;
+  display: inline-block;
+  padding: 4px 12px;
+
+}
+
+.triangle-topleft {
+  
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 10px 15px 0 0;
+  border-color: #000000 transparent transparent transparent;
+  margin-left: 6%;
+  margin-bottom: 5%;
+
+}
+
+
+.text-input{
+  background:rgba(255,255,255,0.2);
+  border-top:1px solid white;
+  height: 2.5rem;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.send-button{
+  position:absolute;
+  right:0.65rem;
+  top:;
+  border-radius:100%;
+  border:2px solid white;
+  background:rgb(10, 146, 209);
+  color:black;
+  cursor: pointer;
+  outline:none;
+  height:1.7rem;
+  width: 1.7rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.send-button[disabled]{
+  background:grey;
+  cursor: default;
+}
+.send-button > svg {
+  color: black;
+}
+.send-button[disabled] > svg {
+  color: white;
+}
+
+.input{
+  height:1.65rem;
+  width: calc(100% - 2rem);
+  background:rgba(0, 0, 0, 0.5);
+  border-radius: 1rem;
+  outline:none;
+  border:2px solid white;
+  color:white;
+  padding-left:10px;
+}
+
+
+
+/* mobile */
+html {
+  font-size: 14px;
+}
+/* tablet */
+@media only screen and (min-width: 480px) {
+  html {
+      font-size: 16px;
+  }
+}
+/* desktop */
+@media only screen and (min-width: 768px) {
+  html {
+      font-size: 18px;
+  }
+}
+/* extra large */
+@media only screen and (min-width: 1024px) {
+  html {
+      font-size: 20px;
+  }
 }
